Fix: Extra space removed between title and carousel for popular and new collection components

--- a/src/index.css
+++ b/src/index.css
@@ -518,7 +518,6 @@ html {
 
 .swiper {
   width: 100%;
-  padding: 40px 0;
 }
 
 .swiper-wrapper {
